ft_strncmp.c included

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -17,7 +17,7 @@ AR		=	ar
 ARFLAGS =	rcs
 RM		=	rm -rf
 
-FILES	=	ft_split.c ft_putstr_fd.c
+FILES	=	ft_split.c ft_strncmp.c ft_putstr_fd.c
 
 HEADER	=	libft.h
 
